# Rust-bilge

./: .gitignore  Cargo.toml  README.md  bench.sh  flamegraph.sh  run.sh
benches/: image.rs  par_search.rs
src/: auth.rs  config.rs  lib.rs  macros.rs  main.rs
src/board/: alt_search.rs  defs.rs  generator.rs  helpers.rs  mod.rs  pos_tracker.rs  redundant_move_filter.rs  row_tracker.rs  searcher.rs  structure.rs  transforms.rs  transforms_beta.rs
src/image/: colours.rs  mod.rs
