[package]
name = "bilge"
version = "0.1.0"
authors = ["JackThomson2 <jackathomson@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
atomic-counter = "1"
rand = "*"
typenum = "1.4"
dashmap = "=4.0.0-rc6"
recolored = { git = "https://github.com/tforgione/colored" }
mimalloc = { version = "*", default-features = false }
snmalloc-rs = {version = "0.2", features = ["build_cc", "native-cpu", "cache-friendly", "16mib"] }
rayon = { version = "1.5.0" }
ahash = { version = "0.7" }
arrayvec = { version = "0.7.1"}
unroll = "0.1.5"

[profile.release]
panic = "abort"
opt-level = 3
codegen-units = 1
lto = "fat"

[[bin]]
name = "bilgebot"
path = "src/main.rs"
