[package]
name = "bilge"
version = "0.1.0"
authors = ["JackThomson2 <jackathomson@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
atomic-counter = "1.0.1"
rand = "0.8.4"
typenum = "1.15.0"
recolored = { git = "https://github.com/tforgione/colored" }
mimalloc = { version = "0.1.27", default-features = false }
snmalloc-rs = { version = "0.2.28", features = ["build_cc", "native-cpu", "cache-friendly", "16mib"] }
rayon = "1.5.1"
ahash = "0.7.6"
arrayvec = "0.7.2"
unroll = "0.1.5"
dashmap = "*"

[profile.release]
panic = "abort"
opt-level = 3
codegen-units = 1
lto = "fat"

[[bin]]
name = "bilgebot"
path = "src/main.rs"
